-add tinygo,and go wasm js file in go code -refactor wasm code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,15 @@
 {
     "cSpell.words": [
         "apptest",
+        "enosys",
+        "fchmod",
+        "ftruncate",
         "funtions",
         "mincss",
         "minh",
         "minjs",
         "mymodule",
+        "Ptrs",
         "tdewolff"
     ]
 }
