fix watch folder proyect add compiler dir var

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    // "go.toolsEnvVars": {
+    //     "GOARCH": "wasm",
+    //     "GOOS": "js"
+    // },
     "cSpell.words": [
         "apptest",
         "enosys",
